# tg2-randomizer

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  analyze_pointer_fields.py  main.cpp
reverse-engineering-docs/: assembly_snippets.txt  finding_minimap.txt  finding_pointers.txt  hud.txt  temp_minimap.txt  track_table.txt
